--- a/frontend/src/app/core/components/nav/nav.component.html
+++ b/frontend/src/app/core/components/nav/nav.component.html
@@ -1,43 +1,34 @@
-<!--==========================
-Header
-============================-->
-<header id="header" class="header-bg-purple" > 
-
-    <nav id="nav-menu-container" class="navbar navbar-expand navbar-expand-lg my-nav">
-        <!--    <h1>
-                <a class="navbar-brand"   >
-                    <span class="highlight-red">Heritage</span> 
-                    <span class="highlight-purple">Innovative</span> 
-                    <span class="highlight-white">Solutions</span>            
-                </a>
-            </h1>-->
-        <div class="navbar-header" style="max-height: 60px; max-width: 200px; top: -50px;">    
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" routerLink="/" >
-                <img src="../assets/images/logo9.jpg" alt="" width="100%" height="60%"/>
-            </a>  
+<div class="nav-container nav-container-fixed">
+    <nav class="navbar navbar-expand-lg ">
+        
+        <div class="navbar-brand-wrapper">
+            <a class="navbar-brand" href="#">
+                <img _ngcontent-c3="" alt="" height="60%" src="../assets/images/logo.png" width="100%">
+            </a>
         </div>
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!--            <span class="navbar-toggler-icon"></span>-->
+            <i class="fa fa-navicon"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto"> 
-                <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active current" routerLink="/" >Home</a>
-                </li>  
-                <li *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1" routerLinkActive="active current" class="nav-item dropdown">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link"  routerLinkActive="active current" routerLink="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                
+                <li class="nav-item dropdown" routerLinkActive="active current" 
+                     *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1" >
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Our Services
                     </a>
-                    <div  class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a *ngFor="let serviceCategory of globals.serviceCategories" class="dropdown-item"  routerLinkActive="active current" [routerLink]="'/services/'+serviceCategory.name" >
-                            {{serviceCategory.name}} </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a  class="dropdown-item"
+                            routerLinkActive="active current" 
+                            *ngFor="let serviceCategory of globals.serviceCategories"  
+                            [routerLink]="'/services/'+serviceCategory.name" >
+                            {{serviceCategory.name}} </a> 
                     </div>
                 </li>
                 <li class="nav-item dropdown" *ngIf="production==false">
@@ -69,14 +60,8 @@ Header
                     <a class="nav-link" routerLinkActive="active current" routerLink="/about-us" >
                         About Us
                     </a>
-                </li>  
+                </li> 
             </ul> 
         </div>
-    </nav>   
-</header>  
-
-<!--<br/><br/><br/><br/>
-serviceCategories : {{ serviceCategories | json }}
-<br/><br/>-->
-<!--serviceCategoriesChange : {{ serviceCategoriesChange | json }}-->
-<!--{{ globals.serviceCategories | json }}-->
+    </nav>
+</div>
